--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
       </div>
       <ul>
         <li>
-          <a href="#">Inscreva-se no NLW</a>
+          <a href="#">Meu perfil</a>
         </li>
         <li>
           <a href="#">Baixe meu e-book</a>
@@ -32,7 +32,7 @@
           <a href="#">Veja meu portfólio</a>
         </li>
         <li>
-          <a href="#">Conheça o Explorer</a>
+          <a href="#">Conheça meus trabalhos</a>
         </li>
       </ul>
       <div id="social-links">
